; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/host/extr_core.c_quirk_matches.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/host/extr_core.c_quirk_matches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_id_ctrl = type { i32, i32, i32 }
%struct.nvme_core_quirk_entry = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvme_id_ctrl*, %struct.nvme_core_quirk_entry*)* @quirk_matches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @quirk_matches(%struct.nvme_id_ctrl* %0, %struct.nvme_core_quirk_entry* %1) #0 {
  %3 = alloca %struct.nvme_id_ctrl*, align 8
  %4 = alloca %struct.nvme_core_quirk_entry*, align 8
  store %struct.nvme_id_ctrl* %0, %struct.nvme_id_ctrl** %3, align 8
  store %struct.nvme_core_quirk_entry* %1, %struct.nvme_core_quirk_entry** %4, align 8
  %5 = load %struct.nvme_core_quirk_entry*, %struct.nvme_core_quirk_entry** %4, align 8
  %6 = getelementptr inbounds %struct.nvme_core_quirk_entry, %struct.nvme_core_quirk_entry* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.nvme_id_ctrl*, %struct.nvme_id_ctrl** %3, align 8
  %9 = getelementptr inbounds %struct.nvme_id_ctrl, %struct.nvme_id_ctrl* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @le16_to_cpu(i32 %10)
  %12 = icmp eq i64 %7, %11
  br i1 %12, label %13, label %31

13:                                               ; preds = %2
  %14 = load %struct.nvme_id_ctrl*, %struct.nvme_id_ctrl** %3, align 8
  %15 = getelementptr inbounds %struct.nvme_id_ctrl, %struct.nvme_id_ctrl* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.nvme_core_quirk_entry*, %struct.nvme_core_quirk_entry** %4, align 8
  %18 = getelementptr inbounds %struct.nvme_core_quirk_entry, %struct.nvme_core_quirk_entry* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @string_matches(i32 %16, i32 %19, i32 4)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %13
  %23 = load %struct.nvme_id_ctrl*, %struct.nvme_id_ctrl** %3, align 8
  %24 = getelementptr inbounds %struct.nvme_id_ctrl, %struct.nvme_id_ctrl* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nvme_core_quirk_entry*, %struct.nvme_core_quirk_entry** %4, align 8
  %27 = getelementptr inbounds %struct.nvme_core_quirk_entry, %struct.nvme_core_quirk_entry* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i64 @string_matches(i32 %25, i32 %28, i32 4)
  %30 = icmp ne i64 %29, 0
  br label %31

31:                                               ; preds = %22, %13, %2
  %32 = phi i1 [ false, %13 ], [ false, %2 ], [ %30, %22 ]
  %33 = zext i1 %32 to i32
  ret i32 %33
}

declare dso_local i64 @le16_to_cpu(i32) #1

declare dso_local i64 @string_matches(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
